<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- 全局 -->
    <string name="app_name">红点</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="settings">设置</string>
    <string name="back">返回</string>
    <string name="complete">完成</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="search">搜索</string>
    <string name="not_login">您还没登陆，请登陆</string>
    <string name="room_cancled">该频道已被频道主关闭</string>
    <string name="umeng_appkey">5535f0f767e58eb272001505</string>

<!--     pull layout -->
	<integer-array name="google_colors">
        <item>@color/red</item>
        <item>@color/blue</item>
        <item>@color/yellow</item>
        <item>@color/green</item>
    </integer-array>
    
    
<!--      闪屏页面 -->
    <string name="act_splash_login">登录</string>
    <string name="act_splash_register">注册</string>
    <string name="act_splash_back">返回</string>
<!--     登录页面 -->
    <string name="act_login_phone_num">请填写手机号</string>
    <string name="act_login_password">请填写密码</string>
    <string name="act_login_weixin">微信登录</string>
    <string name="act_login_qq">QQ登录</string>
    <string name="act_login_code">验证码</string>
    <string name="act_login_forget_pwd">忘记密码？</string>
<!--     重置密码 -->
	<string name="act_reset_pwd1_need_phone_num">重置密码需要验证账号名称</string>
	<string name="act_reset_echo_phone_num">验证短信已经发送到：</string>
	<string name="act_reset_resend_code">重发验证码（60）</string>
	<string name="act_reset_new_pwd">新密码，至少输入8位字母或数字</string>
	<string name="act_reset_new_pwd2">再次输入新密码</string>
	<string name="act_reset_input_code">请输入验证码</string>
	
	<string name="act_reset_new_pwd3_dialog_content1">密码长度不能少于8位数字或字符</string>
	<string name="act_reset_new_pwd3_dialog_content2">密码输入错误</string>
	<string name="act_reset_new_pwd3_dialog_content3">次手机号码没有注册</string>
	<string name="act_reset_new_pwd3_dialog_content4">次手机号码没有注册</string>
	<string name="act_reset_new_pwd3_dialog_content5">手机号码不可用或已被注册</string>
	<string name="act_reset_new_pwd3_dialog_content6">手机号码错误</string>
	<string name="act_reset_new_pwd3_dialog_content7">请输入正确的Phone！</string>
	<string name="act_reset_new_pwd3_dialog_content8">验证码错误！</string>
<!-- 	添加频道 -->
	<string name="act_add_room_et_hint">频道id</string>
	<string name="act_add_room_no_roomid">频道号为空</string>
	<string name="act_add_room_btn_add">添加</string>
	<string name="common_position">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>

<!--     基础框架页面 -->
    <string name="act_base_tab_1">红点</string>
    <string name="act_base_tab_2">订阅</string>
    <string name="act_base_tab_3">私信</string>
    <string name="act_base_tab_4">我</string>
    <string name="action_bar_add_room">添加频道</string>
    <string name="action_bar_create_room">创建频道</string>
    
<!--     下拉刷新 -->
    <string name="pull_refresh">下拉刷新</string>
    <string name="release_refresh">释放刷新</string>
    <string name="release_refresh_success">加载成功</string>
    <string name="release_refresh_doing">加载中...</string>
    
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新：</string>

<!--     聊天室 -->
	<string name="act_chat_room_btn_voice_text">上麦</string>
	<string name="act_chat_room_pop_text1">手指上滑，保持上麦</string>
	<string name="act_chat_room_pop_text2">松开手指，保持上麦</string>
	<string name="act_chat_room_pop_text3">连接中...</string>
	<string name="act_chat_room_send">发送</string>
	<string name="act_chat_room_bottom_blackboard">小黑板</string>
	<string name="act_chat_room_bottom_recording">录制</string>
	<string name="act_keyword">还没有关键字，请点击右上角/"添加/"</string>
    <string name="null_msg">&#160;&#160;&#160;&#160;...&#160;&#160;&#160;&#160;</string>
    <string name="act_chat_room_btn_audio_text">语音</string>
    <string name="act_chat_room_btn_video_text">视频</string>
    <string name="act_chat_room_btn_connecting_text">连接中...</string>
    <string name="act_chat_room_admin">管理员</string>string>
    <string name="act_chat_room_channel_master">频道主</string>
    <string name="act_chat_room_hd_user1">红点用户</string>
    <string name="act_chat_room_hd_user2">  红点用户</string>
    <string name="act_chat_room_menu">菜单</string>

    <!--  网络数据拉取-->
    <string name="net_get_data_fail">获取数据失败</string>
    <string name="net_get_no_more_data">没有更多数据了</string>

    <!-- Share -->
    <string name="act_share_get_data_fail">数据准备失败，请重试</string>

	
</resources>
