<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="10dip"
        android:paddingLeft="@dimen/activity_common_padding"
        android:text="@string/act_reset_pwd1_need_phone_num" 
        android:textColor="#bdbdbc"/>

    
    <EditText
            android:id="@+id/et_reset1_phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/act_login_et_margin_top"
            android:layout_marginLeft="@dimen/act_login_et_margin_left_right"
            android:layout_marginRight="@dimen/act_login_et_margin_left_right"
            android:background="@drawable/et_common_bg_selector"
        	android:hint="@string/act_login_phone_num"
            android:paddingLeft="@dimen/act_login_et_padding_left"
            android:drawableLeft="@drawable/et_left_drawable_phone_tan"
            android:textColor="@color/act_login_et_text_color"
            android:textColorHint="@color/act_login_et_text_hint_color"
        	android:inputType="phone"
            android:textSize="@dimen/text_size_common" />

</LinearLayout>