<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_reset_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/act_login_et_margin_top"
            android:layout_marginLeft="@dimen/act_login_et_margin_left_right"
            android:layout_marginRight="@dimen/act_login_et_margin_left_right"
            android:background="@drawable/et_common_bg_selector"
            android:drawableLeft="@drawable/et_left_drawable_phone_tan"
            android:paddingLeft="@dimen/act_login_et_padding_left"
            android:hint="@string/act_login_phone_num"
            android:inputType="phone"
            android:textColor="@color/act_login_et_text_color"
            android:textColorHint="@color/act_login_et_text_hint_color"
            android:textSize="@dimen/text_size_common" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/act_login_et_margin_top"
            android:layout_marginLeft="@dimen/act_login_et_margin_left_right"
            android:layout_marginRight="@dimen/act_login_et_margin_left_right"
            android:background="@drawable/et_common_bg_selector"
            android:hint="@string/act_login_password"
            android:paddingLeft="@dimen/act_login_et_padding_left"
            android:drawableLeft="@drawable/et_left_drawable_pwd"
            android:textColor="@color/act_login_et_text_color"
            android:textColorHint="@color/act_login_et_text_hint_color"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_common" />

        <Button
            android:id="@+id/btn_phone_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/act_login_btn_login_margin_top"
            android:layout_marginLeft="@dimen/act_login_btn_login_margin_left_right"
            android:layout_marginRight="@dimen/act_login_btn_login_margin_left_right"
            android:background="@drawable/btn_common_white_red_bg_selector"
            android:padding="5dip"
            android:text="@string/act_splash_login"
            android:textColor="@color/act_login_btn_text_color_unable"
            android:textSize="@dimen/text_size_common" />

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/act_login_tv_forget_pwd_margin_top"
            android:layout_marginRight="@dimen/act_login_btn_login_margin_left_right"
            android:gravity="right"
            android:text="@string/act_login_forget_pwd"
            android:textColor="@color/act_login_forget_pwd_text_color"
            android:textSize="@dimen/bottom_tab_font_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin" >

            <LinearLayout
            	android:id="@+id/ll_login_wx"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
	            android:layout_weight="1.0"
	            android:gravity="center"
	            android:background="@drawable/btn_common_white_red_bg_selector">
                
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:drawableLeft="@drawable/et_left_drawable_wx"
		            android:drawablePadding="5dp"
		            android:padding="8dip"
		            android:text="@string/act_login_weixin"
		            android:textSize="@dimen/text_size_common"
		            android:textColor="#62c12d" />
            </LinearLayout>

        <View
            android:layout_width="@dimen/activity_common_padding"
            android:layout_height="0dip" />

        <LinearLayout
            android:id="@+id/ll_login_qq"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1.0"
	        android:gravity="center"
		    android:background="@drawable/btn_common_white_red_bg_selector">
		        
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:drawableLeft="@drawable/et_left_drawable_qq"
		            android:drawablePadding="5dp"
		            android:padding="8dip"
		            android:text="@string/act_login_qq"
		            android:textSize="@dimen/text_size_common" 
		            android:textColor="#2b9dfe" />
		        </LinearLayout>
    </LinearLayout>

</RelativeLayout>