<?xml version="1.0" encoding="utf-8"?>
<fm.dian.hdui.view.face.FaceRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mFaceRelativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/chat_room_bottom_bar_bg_color" >

    <RelativeLayout
        android:id="@+id/rl_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/chat_activity_bottom_bg" >

        <ImageView
            android:id="@+id/ib_change_type"
            android:layout_width="44dip"
            android:layout_height="44dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@drawable/btn_chat_room_type_voice_bg"
            android:contentDescription="@string/app_name" />

           <RelativeLayout
               android:id="@+id/rl_send"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true">
           
	        <TextView
	            android:id="@+id/tv_send"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/btn_common_red_white_bg_selector_small"
	            android:gravity="center"
	            android:text="@string/act_chat_room_send"
	            android:textColor="@color/color_white"/>
	        <ImageView
	            android:id="@+id/iv_blackboard"
	            android:layout_width="44dip"
	            android:layout_height="44dip"
                android:src="@drawable/btn_blackboard_bg"
	            android:gravity="center"
                android:scaleType="centerInside"
                android:visibility="gone"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/rl_send"
            android:layout_toRightOf="@id/ib_change_type" >

            <ImageButton
                android:id="@+id/btn_face"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_chat_activity_face_bg_selector"
                android:contentDescription="@string/app_name" />

            <EditText
                android:id="@+id/et_sendmessage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/btn_face"
                android:background="@drawable/temp_x"
                android:inputType="none"
                android:maxLines="4"
                android:textSize="14sp"
                android:paddingLeft="5dip" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_get_mic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:layout_toLeftOf="@id/rl_send"  
            android:visibility="gone" 
            android:layout_toRightOf="@id/ib_change_type" >

            
            <TextView
	            android:id="@+id/tv_text_mic"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
                android:text="@string/act_chat_room_btn_voice_text"
                android:gravity="center"
                android:visibility="gone"
                android:background="@color/bottomRecordStateColor"/>

            <Button
                android:id="@+id/mediaButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/act_chat_room_btn_connecting_text"
                android:gravity="center"
                android:visibility="gone"
                android:background="@color/bottomRecordStateColor"
                />

            <LinearLayout
                android:id="@+id/mediaLineLayout"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="50dip">

                <View
                    android:layout_width="1px"
                    android:layout_height="fill_parent"
                    android:background="@color/color_black"/>


                <ImageView
                    android:id="@+id/audioButton"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/yuyin"
                    />

                <View
                    android:layout_width="1px"
                    android:layout_height="fill_parent"
                    android:background="@color/color_black"/>

                <ImageView
                    android:id="@+id/videoButton"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/shipin"
                    />

                <View
                    android:layout_width="1px"
                    android:layout_height="fill_parent"
                    android:background="@color/color_black"/>

            </LinearLayout>


            <TextView
	            android:id="@+id/tv_bg_mic"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	        	android:layout_centerInParent="true"
	            android:gravity="center"
	            android:visibility="gone"
	            android:background="@drawable/chat_activity_buttom_bottom_get_mic"/>
            
        </RelativeLayout>
        
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ll_facechoose"
        android:layout_width="fill_parent"
        android:layout_height="170dip"
        android:layout_below="@id/rl_input"
        android:background="@drawable/chat_activity_bottom_bg"
        android:visibility="gone" >

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_contains"
            android:layout_marginTop="10dip"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </android.support.v4.view.ViewPager>

        <LinearLayout
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="6dip"
            android:gravity="center"
            android:orientation="horizontal" >
        </LinearLayout>
    </RelativeLayout>
    
     <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        	android:layout_below="@id/rl_input"
            android:gravity="center"
        	android:background="@drawable/chat_activity_bottom_bg"
            android:orientation="horizontal" >
	        <include
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        layout="@layout/pop_blackboard" />
    </LinearLayout>
         
</fm.dian.hdui.view.face.FaceRelativeLayout>